# stablewrite

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  publish.yml
src/stable_write/: __init__.py  _version.py  finalizers.py  registry.py  stablewrite.py
tests/: test_registry.py  test_shapefile.py  test_stablewrite.py
