[project]
name = "stable-write"
version = "0.1.3"
description = "Deterministic, atomic, save-only-if-modified file writing for Python data pipelines."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Fabien Farella", email = "fabien.farella@gmail.com" },
]
requires-python = ">=3.6"
dependencies = [
    "dataclasses>=0.6; python_version < '3.7'",
    "importlib_metadata>=3.6; python_version < '3.8'",
    "typing_extensions>=3.7.4; python_version < '3.8'",
]
keywords = [
    "deterministic",
    "atomic",
    "file-io",
    "data-pipeline",
    "xlsx",
    "zip",
    "shapefile",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/ews-ffarella/stablewrite"
Repository = "https://github.com/ews-ffarella/stablewrite"
"Bug Tracker" = "https://github.com/ews-ffarella/stablewrite/issues"

[dependency-groups]
dev = [
    "geopandas>=1.0; python_version >= '3.9'",
    "pandas[excel]>=2.0; python_version >= '3.6'",
    "pytest>=7.4; python_version < '3.10'",
    "pytest>=9.0.3; python_version >= '3.10'",
    "ruff>=0.15.15",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
default-groups = ["dev"]
environments = [
    "python_version >= '3.10'",
    "python_version >= '3.8' and python_version < '3.10'",
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[[tool.uv.index]]
name = "stable-write"
url = "https://pypi.org/simple"
# explicit = true

[tool.uv.sources]
stable-write = { index = "stable-write" }
